[gd_scene load_steps=4 format=3 uid="uid://bi5cavnd4r0np"]

[ext_resource type="Script" uid="uid://b6xbg6agb3a2t" path="res://Scripts/options_menu.gd" id="1_o14iw"]
[ext_resource type="Texture2D" uid="uid://0247ghib8kpu" path="res://Assets/Escenario/backmenu.jpg" id="1_vck7s"]
[ext_resource type="AudioStream" uid="uid://dr2wafaulo7b3" path="res://Assets/Songs/menu.mp3" id="3_3hjeq"]

[node name="Opciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o14iw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vck7s")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -70.0
offset_right = 71.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opciones"
horizontal_alignment = 1

[node name="MuteCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Slienciar Audio"

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volumen 100%"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volver"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3hjeq")
volume_db = -5.293
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
